--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> routes in ioc.",
   "repository": {
     "type": "git",
-    "url": "git+_____"
+    "url": "git+https://github.com/Saber2pr/-saber2pr-ioc-route.git"
   },
   "author": "saber2pr",
   "license": "ISC",
